--- a/plantit.yaml
+++ b/plantit.yaml
@@ -2,9 +2,7 @@ name: morphosnake
 author: fjansson
 public: True
 clone: True
-from: Directory
+from: File
 to: Directory
 image: docker://bendjamin101001/morphosnake:v2
 commands: python morphosnake.py "$INPUT"
-params:
- - input
